[package]
name = "cclipboardserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard-master = "3.1.3"
arboard = "3.3.0"
tokio = { version = "1.36.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0.196", features = ["derive"] }
bytes = "1.5.0"
anyhow = "1.0.75"
thiserror = "1.0.48"