[package]
name = "cclipboardserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#clipboard-master = "3.1.3"
#arboard = "3.3.0"
#tokio = { version = "1.36.0", features = ["full"] }
tokio = { version = "1.36.0", features = ["rt","rt-multi-thread"] }
serde_json = "1.0"
serde = { version = "1.0.196", features = ["derive"] }
bytes = "1.5.0"
anyhow = "1.0.75"
thiserror = "1.0.48"
#whoami = "1.4.1"
rand = "0.8.5"
async-recursion = "1.0.5"
log4rs = { version = "1.3.0",features = ["file_appender","pattern_encoder","threshold_filter"]}
log = "0.4.20"
delay_timer = "0.11.5"

#sysinfo = "0.23"
#num_threads = "0.1.7"
num_threads = { git = "https://github.com/jhpratt/num_threads.git", branch = "impl-windows" }

[profile.release]
panic = 'abort'  # 设置为 abort 模式